tests/negative/type_errors/comparison_different_types.nano
# Expected error: Type mismatch in comparison
# Cannot compare int with string

fn compare_bad(x: int, y: string) -> bool {
    return (== x y)
}

shadow compare_bad {
    assert (== (compare_bad 5 "5") false)
}

fn main() -> int {
    return 0
}

shadow main {
    assert (== (main) 0)
}

